<resources>
    <string name="app_name">NACSP</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="choose_your_favorite_theme">Choose your favorite theme</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="save">Save</string>
</resources>
